--- a/index.html
+++ b/index.html
@@ -18,11 +18,62 @@
   </head>
   <body>
     <section id="hero">
-      <div class="container-fluid h-100">
-        <div class="container">
+      <div class="container-fluid h-100 position-relative">
+        <div class="container pt-4 nav-box">
           <div class="nms-nav">
-            <div class="row"></div>
+            <nav class="navbar navbar-expand-lg text-white">
+              <div class="container">
+                <a class="navbar-brand" href="#">
+                  <div class="brand-logo">কণ্ঠ</div>
+                </a>
+                <button
+                  class="navbar-toggler"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#navbarNav"
+                  aria-controls="navbarNav"
+                  aria-expanded="false"
+                  aria-label="Toggle navigation"
+                >
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                  <ul class="navbar-nav ms-md-auto gap-2">
+                    <li class="nav-item rounded">
+                      <a class="nav-link active" aria-current="page" href="#"
+                        ><i class="bi bi-house-fill me-2"></i>Home</a
+                      >
+                    </li>
+                    <li class="nav-item rounded">
+                      <a class="nav-link" href="#"
+                        ><i class="bi bi-people-fill me-2"></i>Activation</a
+                      >
+                    </li>
+                    <li class="nav-item rounded">
+                      <a class="nav-link" href="#"
+                        ><i class="bi bi-people-fill me-2"></i>Tutorials</a
+                      >
+                    </li>
+                    <li class="nav-item rounded">
+                      <a class="nav-link" href="#"
+                        ><i class="bi bi-telephone-fill me-2"></i>FAQs</a
+                      >
+                    </li>
+                    <li class="nav-item rounded">
+                      <a class="nav-link" href="#"
+                        ><i class="bi bi-telephone-fill me-2"></i>Policy</a
+                      >
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </nav>
           </div>
+        </div>
+        <div
+          class="container h-100 d-flex flex-column align-items-center justify-content-center text-white"
+        >
+          <h1>NMS Kontho <small>v4.55</small></h1>
         </div>
       </div>
     </section>
