--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@
       crossorigin="anonymous"
     />
 
+    <!-- Bootstrap Icon -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
+
+    <!-- Flaticon -->
+    <link
+      rel="stylesheet"
+      href="https://cdn-uicons.flaticon.com/2.1.0/uicons-regular-rounded/css/uicons-regular-rounded.css"
+    />
+
     <!-- Style -->
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -41,27 +53,27 @@
                   <ul class="navbar-nav ms-md-auto gap-2">
                     <li class="nav-item rounded">
                       <a class="nav-link active" aria-current="page" href="#"
-                        ><i class="bi bi-house-fill me-2"></i>Home</a
+                        ><i class="bi bi-app me-2"></i>Home</a
                       >
                     </li>
                     <li class="nav-item rounded">
                       <a class="nav-link" href="#"
-                        ><i class="bi bi-people-fill me-2"></i>Activation</a
+                        ><i class="bi bi-alt me-2"></i>Activation</a
                       >
                     </li>
                     <li class="nav-item rounded">
                       <a class="nav-link" href="#"
-                        ><i class="bi bi-people-fill me-2"></i>Tutorials</a
+                        ><i class="bi bi-play-circle me-2"></i>Tutorials</a
                       >
                     </li>
                     <li class="nav-item rounded">
                       <a class="nav-link" href="#"
-                        ><i class="bi bi-telephone-fill me-2"></i>FAQs</a
+                        ><i class="bi bi-patch-question me-2"></i>FAQs</a
                       >
                     </li>
                     <li class="nav-item rounded">
                       <a class="nav-link" href="#"
-                        ><i class="bi bi-telephone-fill me-2"></i>Policy</a
+                        ><i class="bi bi-file-earmark-text me-2"></i>Policy</a
                       >
                     </li>
                   </ul>
@@ -74,9 +86,35 @@
           class="container h-100 d-flex flex-column align-items-center justify-content-center text-white"
         >
           <h1>NMS Kontho <small>v4.55</small></h1>
+          <div class="kontho-bar">
+            <img src="./images/kontho-bar.png" alt="kontho-bar" />
+          </div>
+          <h2>লেখা হোক <span>প্রাণবন্ত</span></h2>
+          <div class="ms-btn d-flex align-items-center gap-2">
+            <div class="ms-btn-icon">
+              <img src="./images/microsoft-dark.png" alt="" />
+            </div>
+            <div>
+              <small>Get it from</small>
+              <h6>Microsoft</h6>
+            </div>
+          </div>
+          <div class="mt-5 text-center">
+            <small class="text-center">Try Also</small>
+            <div class="d-flex gap-4 ip-btn">
+              <div class="d-flex gap-2">
+                <i class="bi bi-download"></i><a href="">Installer</a>
+              </div>
+              <div class="d-flex gap-2">
+                <i class="bi bi-download"></i><a href="">Portable</a>
+              </div>
+            </div>
+          </div>
         </div>
+        <object>অ</object>
       </div>
     </section>
+
     <!-- Bootstrap JS -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
