Hero Section Complete

--- a/index.html
+++ b/index.html
@@ -115,6 +115,32 @@
       </div>
     </section>
 
+    <!-- Requirement -->
+    <section>
+      <div class="container pt-5 pb-5">
+        <div class="row">
+          <div class="col-12 col-md-6">
+            <div class="req-img">
+              <img
+                class="w-100 h-100 object-fit-cover"
+                src="./images/ReadingDoodle.png"
+                alt=""
+              />
+            </div>
+          </div>
+          <div class="col-12 col-md-6">
+            <div class="req-content">
+              <h2>Let's Know about Installation Requirement</h2>
+              <p>
+                To ensure a seamless installation and utilization of this
+                application, your system must meet the following requirements.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Bootstrap JS -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
