--- a/index.html
+++ b/index.html
@@ -135,6 +135,29 @@
                 To ensure a seamless installation and utilization of this
                 application, your system must meet the following requirements.
               </p>
+              <div class="req">
+                <div>
+                  <img src="./images/cpu.png" alt="" />
+                  <p>
+                    64 bit Windows 10, 11, or later (Windows 10 is the minimum
+                    requirement)
+                  </p>
+                </div>
+                <div>
+                  <img src="./images/ram.png" alt="" />
+                  <p>
+                    64 bit Windows 10, 11, or later (Windows 10 is the minimum
+                    requirement)
+                  </p>
+                </div>
+                <div>
+                  <img src="./images/server.png" alt="" />
+                  <p>
+                    64 bit Windows 10, 11, or later (Windows 10 is the minimum
+                    requirement)
+                  </p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
