--- a/index.html
+++ b/index.html
@@ -129,7 +129,9 @@
             </div>
           </div>
           <div class="col-12 col-md-6">
-            <div class="req-content">
+            <div
+              class="req-content d-flex flex-column justify-content-center h-100"
+            >
               <h2>Let's Know about Installation Requirement</h2>
               <p>
                 To ensure a seamless installation and utilization of this
@@ -139,23 +141,19 @@
                 <div>
                   <img src="./images/cpu.png" alt="" />
                   <p>
-                    64 bit Windows 10, 11, or later (Windows 10 is the minimum
-                    requirement)
+                    <b
+                      >64 bit Windows 10, 11, or later <br />(Windows 10 is the
+                      minimum requirement)</b
+                    >
                   </p>
                 </div>
                 <div>
                   <img src="./images/ram.png" alt="" />
-                  <p>
-                    64 bit Windows 10, 11, or later (Windows 10 is the minimum
-                    requirement)
-                  </p>
+                  <p><b>Minimum 4 GB Recommended.</b></p>
                 </div>
                 <div>
-                  <img src="./images/server.png" alt="" />
-                  <p>
-                    64 bit Windows 10, 11, or later (Windows 10 is the minimum
-                    requirement)
-                  </p>
+                  <img src="./images/hard-disk-drive.png" alt="" />
+                  <p><b>100 MB Available.</b></p>
                 </div>
               </div>
             </div>
