Feature Section Created

--- a/index.html
+++ b/index.html
@@ -156,8 +156,32 @@
                   <p><b>100 MB Available.</b></p>
                 </div>
               </div>
+              <div class="req-caution mt-3">
+                <img src="./images/caution.png" alt="" />
+                <small class="opacity-75">
+                  This application is not optimized for low-end PCs. Currently
+                  only available for Windows operating systems. However, the
+                  developer is working on making it available for Linux and Mac
+                  as soon as possible. If you intend to download the installer
+                  or the portable version, please be aware that some antivirus
+                  software may flag these versions. To avoid this issue, you can
+                  install the application directly from the Microsoft App Store.
+                </small>
+              </div>
             </div>
           </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Feature Section -->
+
+    <section id="feature">
+      <div class="container">
+        <h2>NMS Kontho Features</h2>
+        <div class="row">
+          <div class="col-12 col-md-6">a</div>
+          <div class="col-12 col-md-6">b</div>
         </div>
       </div>
     </section>
